Update district
