# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import statsRouter from "./stats";
 import adminRouter from "./admin";
 import debugRouter from "./debug";
 import decisionsRouter from "./decisions";
+import districtsRouter from "./districts";
 
 const router: IRouter = Router();
 
@@ -21,6 +22,7 @@ router.use(governmentRouter);
 router.use(configRouter);
 router.use(statsRouter);
 router.use(decisionsRouter);
+router.use(districtsRouter);
 router.use(debugRouter);
 
 export default router;
